diminui as imagens usando width

--- a/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -106,6 +106,10 @@ table {
     margin: auto;
 }
 
+td > img {
+    width: 50px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
