--- a/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -25,16 +25,8 @@ button:focus {
     color: white;
 }
 
-img {
-    width: 100px;
-}
-
 div>p:first-child {
     display: inline;
-}
-
-div img {
-    background: black;
 }
 
 .botao-amarelo {
@@ -59,6 +51,15 @@ div img {
 
 .icone {
     height: 15px;
+    cursor: pointer;
+}
+
+.icone:hover{
+    opacity: 0.6;
+}
+
+.icone:active{
+    opacity: 1;
 }
 
 
