--- a/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h2 {
@@ -24,6 +25,7 @@ input {
 
 button:focus {
     color: white;
+    outline-width: 0;
 }
 
 div>p:first-child {
@@ -39,6 +41,8 @@ div>p:first-child {
     color: white;
     display: block;
     margin: auto;
+    position: relative;
+    top: 100px;
 }
 
 .botao-amarelo:hover {
@@ -83,12 +87,15 @@ div>p:first-child {
 
 #container-para-comprar {
     background-color: #e7eb90;
+    padding: 100px ;
+    
 }
 
 #container-para-comprar>p {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+
 }
 
 
@@ -110,6 +117,10 @@ table {
 
 td > img {
     width: 50px;
+}
+
+td{
+    text-align: center;
 }
 
 td button {
