arrumei os botoes da tela comprar

--- a/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -131,6 +131,16 @@ td button {
     color: black;
 }
 
+td button:hover {
+    background-color:orange;
+    
+}
+
+td button:active{
+    color: white;
+    background-color: #fadf63;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
